--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+      <link rel="stylesheet" href="src/style.css">
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
          integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
@@ -51,7 +52,7 @@
             </div>
             <div class="col-md-6 m-auto mt-sm-2">
                <div class="card">
-                  <h2 class="mt-5 mb-4 text-center">Informe aqui seu usuário e senha</h2>
+                  <h2 class="mt-5 mb-4 text-center">Informe aqui <br /> seu usuário e senha</h2>
                   <form class="p-5">
                      <div class="form-group">
                         <label class="mb-2" for="exampleInputEmail1">Seu email</label>
@@ -71,7 +72,61 @@
             </div>
          </div>
       </section>
-      <footer class="my-5 pt-5 text-muted text-center text-small">
+      <section class="py-5 project_bg-color my-5 text-center">
+         <div class="container">
+            <h2>
+               What is Lorem Ipsum?
+            </h2>
+            <p>
+               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+         </div>
+      </section>
+      <section class="container">
+         <div class="row">
+            <div class="col-8">
+               <img src="https://boring-feynman-12ba8b.netlify.app/img/bootstrap-icons.png" class="img-fluid"
+                     width="100%" alt="Imagem resposiva">
+            </div>
+            <div class="col-4">
+               <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+               </p>
+            </div>
+         </div>
+      </section>
+      <section class="my-5 project_bg-color-gray py-5">
+         <div class="container">
+            <img src="https://boring-feynman-12ba8b.netlify.app/img/bootstrap-icons.png" class="img-fluid"
+                  width="100%" alt="Imagem resposiva">
+         </div>
+      </section>
+      <section class="container">
+         <h2 class="mb-3">
+            What is Lorem Ipsum?
+         </h2>
+         <div>
+            <div class="row">
+               <div class="col-8">
+                  <p>
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  </p>   
+               </div>
+               <div class="col-4">
+                  <div>
+                     <img src="https://boring-feynman-12ba8b.netlify.app/img/bootstrap-icons.png" class="img-fluid"
+                     width="100%" alt="Imagem resposiva">
+                  </div>
+                  <div class="mt-3">
+                     <button class="btn btn-primary">
+                        Clique aqui e veja mais
+                     </button>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <footer class="mt-5 pt-5 pb-4 text-muted text-center text-small">
          <p>© Copyrigth 2021</p>
       </footer>
    </body>
