--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
       </section>
       <section class="container">
          <div class="row">
-            <div class="col-8">
+            <div class="col-12 col-sm-6 col-md-8">
                <img src="https://boring-feynman-12ba8b.netlify.app/img/bootstrap-icons.png" class="img-fluid"
                      width="100%" alt="Imagem resposiva">
             </div>
-            <div class="col-4">
+            <div class="col-12 col-sm-6 col-md-4">
                <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                </p>
@@ -107,17 +107,17 @@
          </h2>
          <div>
             <div class="row">
-               <div class="col-8">
+               <div class="col-12 col-sm-6 col-md-8">
                   <p>
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                   </p>   
                </div>
-               <div class="col-4">
+               <div class="col-12 col-sm-6 col-md-4">
                   <div>
                      <img src="https://boring-feynman-12ba8b.netlify.app/img/bootstrap-icons.png" class="img-fluid"
                      width="100%" alt="Imagem resposiva">
                   </div>
-                  <div class="mt-3">
+                  <div class="mt-3 text-center">
                      <button class="btn btn-primary">
                         Clique aqui e veja mais
                      </button>
